Update pausedChatPostsCount only every 200 ms
*minor code clean up

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -2647,9 +2647,6 @@
         }
       }
     },
-    "%d new Messages" : {
-
-    },
     "%lld %%" : {
       "localizations" : {
         "de" : {
@@ -2879,6 +2876,9 @@
           }
         }
       }
+    },
+    "%lld new messages" : {
+
     },
     "%llu" : {
       "localizations" : {
